<resources>
    <!--Tab navigation-->
    <string name="title_activity_tab">Example Tab Activity</string>
    <string name="my_reservations">My reservations</string>
    <string name="rooms">Rooms</string>
    <string name="all_reservations">All reservations</string>

<!--Room overview page-->
<string name="view_room">View</string>

<!--Room detail page-->
<string name="reserve_this_room">Reserve this room</string>
<string name="detail_whiteboard">Whiteboard</string>
<string name="detail_screen">Screen</string>
<string name="detail_flipchart">Flip chart</string>

<!--Reservation details-->
<string name="add_meeting_title">Add a title</string>
<string name="start_time">Start</string>
<string name="end_time">End</string>
<string name="attendees">Attendees</string>
<string name="add_attendees">Add</string>
<string name="save_reservation">Save</string>

<!--Calendar-->
<string-array name="months_array">
    <item>JAN</item>
    <item>FEB</item>
    <item>MAR</item>
    <item>APR</item>
    <item>MAY</item>
    <item>JUN</item>
    <item>JUL</item>
    <item>AUG</item>
    <item>SEP</item>
    <item>OCT</item>
    <item>NOV</item>
    <item>DEC</item>
</string-array>

<string-array name="weekdays_array">
    <item>MON</item>
    <item>TUE</item>
    <item>WED</item>
    <item>THU</item>
    <item>FRI</item>
    <item>SAT</item>
    <item>SUN</item>
</string-array>

    <string-array name = "capacity_array">
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>20</item>
    </string-array>

    <string-array name = "roomnames_array">
        <item>Mammut</item>
        <item>Jungle</item>
        <item>Elephant</item>
        <item>Hunting Room</item>
        <item>Beach House 2.0</item>
        <item>Zoo</item>
    </string-array>

    <string-array name = "duration_array">
        <item>1h</item>
        <item>2h</item>
        <item>3h</item>
        <item>4h</item>
    </string-array>


    <!--Picking a time-->
<string name="add_meeting">Add meeting</string>

<!--Empty/error states-->
<string name="refresh">Refresh</string>
<string name="no_reservations">It seems you have no reservations.</string>
<string name="choose_a_room">Choose a room to add a new reservation.</string>
<string name="no_connection">Uh oh&#8230; We can\'t find the mothership!</string>
<string name="no_rooms">Uh oh&#8230; No rooms exist!</string>
<string name="try_refreshing">Try refreshing and if the problem persists contact the admin.</string>

<!--Others/placeholders-->
<string name="app_name">M2hva-ReservationSystem</string>
<string name="todo">TODO</string>
<string name="reserve_room_title">Reserve Room</string>
<string name="button_label_enabled">Button Label Enabled</string>
<string name="details_room">Details</string>
<string name="action_settings">Settings</string>
<string name="section_format">Hello World from section: %1$d</string>
<string name="button_get_events">Get Events</string>
<string name="title_activity_login">Sign in</string>
<string name="title_activity_state">Error</string>
<string name="toolbar_title">Rooms</string>

<!--Login -->
<string name="prompt_email">Email</string>
<string name="prompt_password">Password (optional)</string>
<string name="action_sign_in">Sign in or register</string>
<string name="action_sign_in_short">Sign in</string>
<string name="error_invalid_email">This email address is invalid</string>
<string name="error_invalid_password">This password is too short</string>
<string name="error_incorrect_password">This password is incorrect</string>
<string name="error_field_required">This field is required</string>
<string name="permission_rationale">"Contacts permissions are needed for providing email
        completions." </string>

    <!--Icons by fontawsome cheatsheet-->
    <string name="rsv_date">&#xf073;</string>
    <string name="rsv_clock">&#xf017;</string>
    <string name="rsv_user">&#xf508;</string>
    <string name="status_red">&#xf057;</string>
    <string name="status_green">&#xf058;</string>

    <string name="no_connection_title">Connection failure!</string>
    <string name="no_connection_text">Something has gone wrong with the internet connection. Let\'s give it another shot.</string>
    <string name="give_permission_title">Don"'t you trust us?</string>
    <string name="give_permission_text">To use this app you need to give us more access to your data. To do that just refresh the page and press allow.</string>
    <string name="give_permission_button">Allow permissions</string>

    <string name="no_booking_title">No meetings?</string>
    <string name="no_booking_text">Let\'s change that!</string>
    <string name="no_booking_action_text">Book a room now!</string>

    <!--Reservations-->
    <string name="make_a_reservation">Make a reservation</string>
    <string name="reserve_room_endtime">End time</string>
    <string name="reserve_room_starttime">Start time</string>
    <string name="reserve_room_name">Room name</string>
    <string name="reserve_room_capacity">Amount of attendees</string>
    <string name="capacity">Capacity: </string>
    <string name="reserve_room_date">Date</string>
    <string name="reserve_room_slots">Available slots</string>
    <string name="reserved_from">From</string>
    <string name="reserved_until">until</string>
    <string name="until_booked_time">@string/rsv_clock</string>
    <string name="invalid_time">This time is not available, please select an available timeslot</string>

    <string name="room_name">Room name</string>
    <string name="room_description">Description</string>
    <string name="remove_title">Remove Reservation</string>
    <string name="remove_description">Are you sure you want to remove this reservation?</string>
    <string name="reservation_added">Well Done! Your Room Reservation Has Been Made</string>
    <string name="confirm">OK</string>
    <string name="available">Available until: </string>
    <string name="not_availabile">Not available until: </string>

</resources>
