<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_huge"
        android:layout_marginTop="@dimen/spacing_normal"
        app:srcCompat="@drawable/permission"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/text_normal"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/give_permission_title"
        android:gravity="center"
        android:textSize="@dimen/font_larger"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/text_normal"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/spacing_tiny"
        android:text="@string/give_permission_text"
        android:textAllCaps="false"
        android:textSize="@dimen/font_normal"
        />

    <Button
        android:id="@+id/givePermission"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_tiny"
        android:text="@string/give_permission_button"/>

</LinearLayout>